--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -283,6 +283,9 @@
             </div>
             
             <form th:action="@{/login}" method="post">
+                <!-- CSRF Token -->
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}"/>
+                
                 <div class="form-floating">
                     <input type="text" class="form-control" id="username" name="username" required 
                            placeholder="Username">
